--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
 pandas==0.25.3
 requests==2.11.1
 SQLAlchemy==1.3.4
-selenium==3.141.0
 psycopg2_binary==2.8.2
-beautifulsoup4==4.9.1
-psycopg2==2.8.5
-pytest==6.0.1
+beautifulsoup4==4.9.3
+psycopg2==2.8.6
+tqdm==4.46.0
 lxml==4.5.2
-tqdm
+requests_oauthlib==1.3.0
